{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 188,
  "lineage": "1f68877f-8546-2d7f-1566-1879d0aff279",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "rextlb-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.207.219.183",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-03-06T07:15:12.476-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/norse-bond-323008/regions/asia-south1/addresses/rextlb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "rextlb-ip",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "norse-bond-323008",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/addresses/rextlb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/forwardingRules/rextlb-fr"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_apptier_to_dbtier",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-06T07:50:25.169-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/norse-bond-323008/global/firewalls/allow-apptier-to-dbtier",
            "log_config": [],
            "name": "allow-apptier-to-dbtier",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "params": [],
            "priority": 1000,
            "project": "norse-bond-323008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/firewalls/allow-apptier-to-dbtier",
            "source_ranges": [
              "10.0.2.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "dbtier-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db_replication",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-06T07:50:25.062-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/norse-bond-323008/global/firewalls/allow-db-replication",
            "log_config": [],
            "name": "allow-db-replication",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "params": [],
            "priority": 1000,
            "project": "norse-bond-323008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/firewalls/allow-db-replication",
            "source_ranges": [
              "10.0.3.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "dbtier-secondary"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web_to_ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-06T07:50:25.093-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/norse-bond-323008/global/firewalls/allow-web-to-ilb",
            "log_config": [],
            "name": "allow-web-to-ilb",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "params": [],
            "priority": 1000,
            "project": "norse-bond-323008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/firewalls/allow-web-to-ilb",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app-tier-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-06T07:50:50.083-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/norse-bond-323008/global/firewalls/webapp-fw3",
            "log_config": [],
            "name": "webapp-fw3",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "params": [],
            "priority": 1000,
            "project": "norse-bond-323008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/firewalls/webapp-fw3",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webapp-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw4",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-06T07:51:03.585-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/norse-bond-323008/global/firewalls/webapp-fw4",
            "log_config": [],
            "name": "webapp-fw4",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "params": [],
            "priority": 1000,
            "project": "norse-bond-323008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/firewalls/webapp-fw4",
            "source_ranges": [
              "10.129.0.0/26"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webapp-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "proxytoapptier-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-06T07:50:24.622-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/norse-bond-323008/global/firewalls/proxy-to-apptier-fw",
            "log_config": [],
            "name": "proxy-to-apptier-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "params": [],
            "priority": 1000,
            "project": "norse-bond-323008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/firewalls/proxy-to-apptier-fw",
            "source_ranges": [
              "10.0.1.0/24",
              "10.129.1.0/26"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app-tier-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "apptier-fw-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2026-03-06T08:08:33.801-08:00",
            "forwarding_rule_id": 4311021616240214766,
            "id": "projects/norse-bond-323008/regions/asia-south1/forwardingRules/apptier-fw-rule",
            "ip_address": "10.129.1.2",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "apptier-fw-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "network_tier": "PREMIUM",
            "port_range": "8080-8080",
            "project": "norse-bond-323008",
            "recreate_closed_psc": false,
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/forwardingRules/apptier-fw-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/subnetworks/proxy-subnet-2",
            "target": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/targetHttpProxies/apptier-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.debian-11",
            "google_compute_instance_template.app-tier-instance-template",
            "google_compute_network.webapp-vpc",
            "google_compute_region_backend_service.apptier-backend-service",
            "google_compute_region_health_check.apptier-health-check",
            "google_compute_region_instance_group_manager.apptier-instance-group",
            "google_compute_region_target_http_proxy.apptier-http-proxy",
            "google_compute_region_url_map.apptier-url-map",
            "google_compute_subnetwork.apptier-subnet",
            "google_compute_subnetwork.proxy-subnet",
            "google_compute_subnetwork.proxy-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "rextlb-fr",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2026-03-06T07:52:28.056-08:00",
            "forwarding_rule_id": 2075250139467302611,
            "id": "projects/norse-bond-323008/regions/asia-south1/forwardingRules/rextlb-fr",
            "ip_address": "35.207.219.183",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "rextlb-fr",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "network_tier": "STANDARD",
            "port_range": "80-80",
            "project": "norse-bond-323008",
            "recreate_closed_psc": false,
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/forwardingRules/rextlb-fr",
            "target": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/targetHttpProxies/rextlb-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.debian-11",
            "google_compute_address.rextlb-ip",
            "google_compute_firewall.fw4",
            "google_compute_instance_template.webapp-instance-template",
            "google_compute_network.webapp-vpc",
            "google_compute_region_backend_service.rextlb-backend-service",
            "google_compute_region_health_check.rextlb-health-check",
            "google_compute_region_instance_group_manager.webapp-instance-group",
            "google_compute_region_target_http_proxy.rextlb-http-proxy",
            "google_compute_region_url_map.rextlb-url-map",
            "google_compute_subnetwork.proxy-subnet",
            "google_compute_subnetwork.webtier-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/zones/asia-south1-a/disks/pg-primary"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-03-06T07:50:27.894-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/norse-bond-323008/zones/asia-south1-a/instances/pg-primary",
            "instance_id": "8274685653401684268",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "dGLMU2bo7QY=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y postgresql-13 postgresql-contrib\r\nsystemctl start postgresql\r\nsystemctl enable postgresql\r\nsed -i \"s/#listen_addresses = 'localhost'/listen_addresses = '*'/\" /etc/postgresql/13/main/postgresql.conf\r\necho \"host replication replicator 10.0.3.0/24 md5\" \u003e\u003e /etc/postgresql/13/main/pg_hba.conf\r\nsystemctl restart postgresql\r\nsudo -u postgres psql -c \"CREATE USER replicator WITH REPLICA [...]
            "name": "pg-primary",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
                "network_ip": "10.0.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/subnetworks/dbtier-subnet",
                "subnetwork_project": "norse-bond-323008",
                "vlan": 0
              }
            ],
            "project": "norse-bond-323008",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/zones/asia-south1-a/instances/pg-primary",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dbtier-backend"
            ],
            "tags_fingerprint": "QzaFJMXYU4Y=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc",
            "google_compute_subnetwork.dbtier-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_standby",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/zones/asia-south1-b/disks/pg-standby"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-03-06T07:50:49.302-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/norse-bond-323008/zones/asia-south1-b/instances/pg-standby",
            "instance_id": "5143653206127495478",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "w2ViOGXvUl4=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y postgresql-13 postgresql-contrib\r\nsystemctl start postgresql\r\nsystemctl enable postgresql\r\nsystemctl stop postgresql\r\nrm -rf /var/lib/postgresql/13/main/*\r\nexport PGPASSWORD='passwprd123'\r\nsudo -u postgres pg_basebackup -h 10.0.3.2 -D /var/lib/postgresql/13/main/ -U replicator -P -X stream -R\r\nsystemctl start postgresql\r\n",
            "name": "pg-standby",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
                "network_ip": "10.0.3.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/subnetworks/dbtier-subnet",
                "subnetwork_project": "norse-bond-323008",
                "vlan": 0
              }
            ],
            "project": "norse-bond-323008",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/zones/asia-south1-b/instances/pg-standby",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dbtier-secondary"
            ],
            "tags_fingerprint": "IQGO8JVGGBk=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_instance.db_primary",
            "google_compute_network.webapp-vpc",
            "google_compute_subnetwork.dbtier-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "webapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/norse-bond-323008/global/networks/webapp-vpc",
            "mtu": 1460,
            "name": "webapp-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7062589060053160268",
            "numeric_id": "7062589060053160268",
            "project": "norse-bond-323008",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "apptier-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/instanceGroups/apptier-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-06T07:50:54.685-08:00",
            "enable_cdn": false,
            "fingerprint": "NzuF6nsSSzs=",
            "generated_id": 5293891772026931505,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/healthChecks/apptier-health-check"
            ],
            "id": "projects/norse-bond-323008/regions/asia-south1/backendServices/apptier-backend-service",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "apptier-backend-service",
            "port_name": "http",
            "project": "norse-bond-323008",
            "protocol": "HTTP",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/backendServices/apptier-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.debian-11",
            "google_compute_instance_template.app-tier-instance-template",
            "google_compute_instance_template.apptier-instance-template",
            "google_compute_network.webapp-vpc",
            "google_compute_region_health_check.apptier-health-check",
            "google_compute_region_instance_group_manager.apptier-instance-group",
            "google_compute_subnetwork.apptier-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "rextlb-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/instanceGroups/webapp-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-06T07:51:29.003-08:00",
            "enable_cdn": false,
            "fingerprint": "ICnfMtZOuuo=",
            "generated_id": 3624878574701856494,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/healthChecks/rextlb-health-check"
            ],
            "id": "projects/norse-bond-323008/regions/asia-south1/backendServices/rextlb-backend-service",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "rextlb-backend-service",
            "port_name": "http",
            "project": "norse-bond-323008",
            "protocol": "HTTP",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/backendServices/rextlb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.debian-11",
            "google_compute_firewall.fw4",
            "google_compute_instance_template.webapp-instance-template",
            "google_compute_network.webapp-vpc",
            "google_compute_region_health_check.rextlb-health-check",
            "google_compute_region_instance_group_manager.webapp-instance-group",
            "google_compute_subnetwork.webtier-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "apptier-url-map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-06T07:51:28.201-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/backendServices/apptier-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "cfS_bvZN3IU=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/norse-bond-323008/regions/asia-south1/urlMaps/apptier-url-map",
            "map_id": 696102721581172463,
            "name": "apptier-url-map",
            "path_matcher": [],
            "project": "norse-bond-323008",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/urlMaps/apptier-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.debian-11",
            "google_compute_instance_template.app-tier-instance-template",
            "google_compute_network.webapp-vpc",
            "google_compute_region_backend_service.apptier-backend-service",
            "google_compute_region_health_check.apptier-health-check",
            "google_compute_region_instance_group_manager.apptier-instance-group",
            "google_compute_subnetwork.apptier-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "rextlb-url-map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-06T07:52:02.251-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/backendServices/rextlb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "VbjVOvyMAhE=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/norse-bond-323008/regions/asia-south1/urlMaps/rextlb-url-map",
            "map_id": 2876104864059311821,
            "name": "rextlb-url-map",
            "path_matcher": [],
            "project": "norse-bond-323008",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/urlMaps/rextlb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.debian-11",
            "google_compute_firewall.fw4",
            "google_compute_instance_template.webapp-instance-template",
            "google_compute_network.webapp-vpc",
            "google_compute_region_backend_service.rextlb-backend-service",
            "google_compute_region_health_check.rextlb-health-check",
            "google_compute_region_instance_group_manager.webapp-instance-group",
            "google_compute_subnetwork.webtier-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-06T07:16:11.242-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/norse-bond-323008/regions/asia-south1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "project": "norse-bond-323008",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/routers/nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "norse-bond-323008/asia-south1/nat-router/nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "norse-bond-323008",
            "region": "asia-south1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc",
            "google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "apptier-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-03-06T07:16:12.251-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/norse-bond-323008/regions/asia-south1/subnetworks/apptier-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "apptier-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "norse-bond-323008",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/subnetworks/apptier-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 5998403529696825683
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dbtier-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-03-06T07:16:11.633-08:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/norse-bond-323008/regions/asia-south1/subnetworks/dbtier-subnet",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "dbtier-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "norse-bond-323008",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/subnetworks/dbtier-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4549239778289602900
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-03-06T07:16:12.906-08:00",
            "gateway_address": "10.129.0.1",
            "id": "projects/norse-bond-323008/regions/asia-south1/subnetworks/proxy-subnet",
            "ip_cidr_range": "10.129.0.0/26",
            "name": "proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "norse-bond-323008",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "asia-south1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/subnetworks/proxy-subnet",
            "state": "READY",
            "subnetwork_id": 8592844980874596691
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-03-06T08:07:59.337-08:00",
            "gateway_address": "10.129.1.1",
            "id": "projects/norse-bond-323008/regions/asia-south1/subnetworks/proxy-subnet-2",
            "ip_cidr_range": "10.129.1.0/26",
            "name": "proxy-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "norse-bond-323008",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/subnetworks/proxy-subnet-2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3387177818772686128
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "webtier-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-03-06T07:16:12.119-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/norse-bond-323008/regions/asia-south1/subnetworks/webtier-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "webtier-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/global/networks/webapp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "norse-bond-323008",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-bond-323008/regions/asia-south1/subnetworks/webtier-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4491075656129925459
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.webapp-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}